# 13_django_vod

./: .gitignore
blog/: .python-version  pyproject.toml  requirements.txt  vercel.json
blog/api/: index.py
blog/blog/: admin.py  cb_views.py  fbv_urls.py  forms.py  models.py  urls.py  views.py
blog/blog/migrations/: 0001_initial.py  0002_alter_blog_options_blog_author.py  0003_alter_blog_category.py  0004_comment.py  0005_alter_comment_options.py  0006_blog_image.py  0007_blog_thumbnail.py
blog/config/: settings.py  urls.py
blog/member/: views.py
blog/templates/: base.html  form_js.html  pagination.html  test_get.html  test_post.html
blog/templates/blog/: blog_create.html  blog_detail.html  blog_form.html  blog_list.html  blog_update.html
blog/templates/registration/: login.html  signup.html
blog/utils/: models.py
bookmark/: pyproject.toml
bookmark/bookmark/: admin.py  models.py  views.py
bookmark/bookmark/migrations/: 0001_initial.py
bookmark/config/: settings.py  urls.py
bookmark/templates/: book_detail.html  book_list.html  bookmark_detail.html  bookmark_list.html  champion.html  champion_detail.html  gugu.html
pycharm_study/mysite/mysite/: settings.py
pystagram/: .python-version  pyproject.toml
pystagram/.config_secret/: secret.json
pystagram/config/: settings.py  urls.py
pystagram/member/: admin.py  forms.py  models.py  oauth_urls.py  oauth_views.py  urls.py  views.py
pystagram/post/: admin.py  comment_urls.py  forms.py  models.py  views.py
pystagram/templates/: base.html
pystagram/utils/: email.py  forms.py  models.py
(+21 files in other folders)
