[tool.poetry]
name = "oz-13-django"
version = "0.1.0"
description = ""
authors = ["SWWS97 <parkmon26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
black = "^25.1.0"
isort = "^6.0.1"
ipython = "^9.5.0"
django-extensions = "^4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
